Install DBus Service

--- a/data/meson.build
+++ b/data/meson.build
@@ -3,6 +3,14 @@ install_data(
     install_dir: join_paths(datadir, 'xdg-desktop-portal', 'portals')
 )
 
+configure_file(
+    input: 'org.freedesktop.impl.portal.desktop.pantheon.service.in',
+    output: '@BASENAME@',
+    configuration: conf_data,
+    install: true,
+    install_dir: join_paths(datadir, 'dbus-1', 'services')
+)
+
 systemd_systemduserunitdir = get_option('systemduserunitdir')
 if systemd_systemduserunitdir == ''
     systemd_dep.get_pkgconfig_variable('systemduserunitdir', define_variable: ['prefix', prefix])
