Fix SystemD Service Installation

--- a/data/meson.build
+++ b/data/meson.build
@@ -13,12 +13,13 @@ configure_file(
 
 systemd_systemduserunitdir = get_option('systemduserunitdir')
 if systemd_systemduserunitdir == ''
-    systemd_dep.get_pkgconfig_variable('systemduserunitdir', define_variable: ['prefix', prefix])
+    systemd_systemduserunitdir = systemd_dep.get_pkgconfig_variable('systemduserunitdir', define_variable: ['prefix', prefix])
 endif
 
 configure_file(
     input: meson.project_name() + '.service.in',
-    output: meson.project_name() + '.service',
+    output: '@BASENAME@',
     configuration: conf_data,
-    install_dir: systemd_systemduserunitdir,
+    install: true,
+    install_dir: systemd_systemduserunitdir
 )
