--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install Dependencies
       run: |
         apt update
-        apt install -y libgtk-3-dev meson valac
+        apt install -y libgranite-dev libgtk-3-dev meson valac
     - name: Build
       run: |
         meson build
