Very rough sketch of an AccountChooser portal

--- a/src/meson.build
+++ b/src/meson.build
@@ -11,6 +11,9 @@ executable(
     'ExternalWindow.vala',
     'Access/Portal.vala',
     'Access/Dialog.vala',
+    'AccountChooser/Portal.vala',
+    'AccountChooser/Dialog.vala',
+    'AccountChooser/AccountButton.vala',
     'AppChooser/Portal.vala',
     'AppChooser/Dialog.vala',
     'AppChooser/AppButton.vala',
