Sidebar layout for choosing portal demo

--- a/demo/meson.build
+++ b/demo/meson.build
@@ -4,8 +4,10 @@ executable(
     meson.project_name(),
     'Application.vala',
     'MainWindow.vala',
+    'Views' / 'AppChooser.vala',
     dependencies: [
-        dependency('gtk+-3.0')
+        dependency('gtk+-3.0'),
+        dependency('granite', version: '>= 6.0.0')
     ],
     install: true
 )
