--- a/demo/io.elementary.portals.demo.yml
+++ b/demo/io.elementary.portals.demo.yml
@@ -7,6 +7,9 @@ finish-args:
   - '--share=ipc'
   - '--socket=fallback-x11'
   - '--socket=wayland'
+
+  # Needed by: AppChooser
+  - '--filesystem=home'
 modules:
   - name: demo
     buildsystem: meson
