--- a/data/portals.appdata.xml.in
+++ b/data/portals.appdata.xml.in
@@ -10,6 +10,14 @@
     <p>Portals provide APIs to secure apps which enable them to access system features while requiring informed consent.</p>
   </description>
   <releases>
+    <release version="1.0.1" date="2021-10-27" urgency="medium">
+      <description>
+        <p>Fixes:</p>
+        <ul>
+          <li>Prevent delay after logging in</li>
+        </ul>
+      </description>
+    </release>
     <release version="1.0.0" date="2021-10-25" urgency="medium">
       <description>
         <p>First release!</p>
