Access: Restructure Code
* add an `Access.Choice` class for handling choices
* move the DBus code from the dialog to the portal
* actually add the app icon as badge
* fixes losing focus and spawning at (0,0) when no parent is provided

--- a/src/meson.build
+++ b/src/meson.build
@@ -11,6 +11,7 @@ executable(
     'ExternalWindow.vala',
     'Access/Portal.vala',
     'Access/Dialog.vala',
+    'Access/Choice.vala',
     'AppChooser/Portal.vala',
     'AppChooser/Dialog.vala',
     'AppChooser/AppButton.vala',
