AppData: Fix a typo

--- a/data/portals.appdata.xml.in
+++ b/data/portals.appdata.xml.in
@@ -14,7 +14,7 @@
       <description>
         <p>New Features:</p>
         <ul>
-          <li>Add a desctructive action option for access portals</li>
+          <li>Add a destructive action option for access portals</li>
         </ul>
         <p>Fixes:</p>
         <ul>
