AppData: Fix typos (#47)

--- a/data/portals.appdata.xml.in
+++ b/data/portals.appdata.xml.in
@@ -14,13 +14,13 @@
       <description>
         <p>New Features:</p>
         <ul>
-          <li>Add a desctructive action option for access portals</li>
+          <li>Add a destructive action option for access portals</li>
         </ul>
         <p>Fixes:</p>
         <ul>
           <li>Fix a crash when opening apps in the AppChooser portal</li>
           <li>Fix window focus and position for Access portals with no parent window</li>
-          <li>Set AppChoser portal as a modal dialog for proper animations</li>
+          <li>Set AppChooser portal as a modal dialog for proper animations</li>
         </ul>
       </description>
     </release>
