ExternalWindow: use `X.Display.set_transient_hint()`
`Gdk.Window.set_transient_for()` was removed on Gtk4, so we need to
use the x11 methods directly.

--- a/src/meson.build
+++ b/src/meson.build
@@ -21,6 +21,7 @@ executable(
         gio_dep,
         gtk_dep,
         gdk_dep,
+        x11_dep,
         granite_dep,
         handy_dep
     ],
