--- a/src/Config.vala.in
+++ b/src/Config.vala.in
@@ -1,4 +1,5 @@
 namespace Config {
     const string GETTEXT_PACKAGE = @GETTEXT_PACKAGE@;
     const string LOCALEDIR = @LOCALEDIR@;
+    const string VERSION = @VERSION@;
 }
