--- a/meson.build
+++ b/meson.build
@@ -12,10 +12,8 @@ systemd_dep = dependency('systemd')
 glib_dep = dependency('glib-2.0')
 gobject_dep = dependency('gobject-2.0')
 gio_dep = dependency('gio-2.0')
-gtk_dep = dependency('gtk+-3.0')
-gdk_dep = dependency('gdk-x11-3.0')
-granite_dep = dependency('granite')
-handy_dep = dependency('libhandy-1')
+gtk_dep = dependency('gtk4')
+granite_dep = dependency('granite-7')
 
 add_global_arguments(
     '-DGETTEXT_PACKAGE="@0@"'.format (meson.project_name()),
