--- a/data/portals.appdata.xml.in
+++ b/data/portals.appdata.xml.in
@@ -10,6 +10,14 @@
     <p>Portals provide APIs to secure apps which enable them to access system features while requiring informed consent.</p>
   </description>
   <releases>
+    <release version="1.2.0" data="2022-05-05" urgency="medium">
+      <description>
+        <p>New Features:</p>
+        <ul>
+          <li>Support dialog parenting on wayland</li>
+        </ul>
+      </description>
+    </release>
     <release version="1.1.0" date="2022-01-24" urgency="medium">
       <description>
         <p>New Features:</p>
