--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,14 +12,14 @@ jobs:
     runs-on: ubuntu-latest
     
     container:
-      image: elementary/docker:unstable
+      image: elementary/docker:next-unstable
     
     steps:
     - uses: actions/checkout@v2
     - name: Install Dependencies
       run: |
         apt update
-        apt install -y libgranite-dev libgtk-3-dev meson valac
+        apt install -y libgranite-7-dev libgtk-4-dev meson valac
     - name: Build
       run: |
         meson build
