--- a/meson.build
+++ b/meson.build
@@ -13,9 +13,15 @@ glib_dep = dependency('glib-2.0')
 gobject_dep = dependency('gobject-2.0')
 gio_dep = dependency('gio-2.0')
 gtk_dep = dependency('gtk+-3.0')
-gdk_dep = dependency('gdk-x11-3.0')
+gdk_dep = [ dependency('gdk-x11-3.0'), dependency('gdk-wayland-3.0') ]
+x11_dep = dependency('x11')
 granite_dep = dependency('granite')
 handy_dep = dependency('libhandy-1')
+
+add_project_arguments(
+    '--vapidir', meson.current_source_dir() / 'vapi',
+    language: 'vala'
+)
 
 add_global_arguments(
     '-DGETTEXT_PACKAGE="@0@"'.format (meson.project_name()),
