--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -8,14 +8,14 @@ on:
 jobs:
   gettext:
     name: Gettext
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout
         uses: actions/checkout@v1
 
       - name: Gettext
-        uses: elementary/actions/gettext-template@master
+        uses: elementary/actions/gettext-template@horus
         env:
           GIT_USER_TOKEN: "${{ secrets.GIT_USER_TOKEN }}"
           GIT_USER_NAME: "elementaryBot"
