update meson files
* make use of the '/' join separator everywere
* sort source files following the meson's style recomendations
* remove unecessary args from i18n.gettext()
* set minimum meson version to 0.58
* don't use deprecated functions

--- a/po/extra/meson.build
+++ b/po/extra/meson.build
@@ -1,5 +1,1 @@
-i18n.gettext('extra',
-    args: ['--directory='+meson.source_root()],
-    install: false,
-    preset: 'glib'
-)
+i18n.gettext('extra', install: false, preset: 'glib')
