--- a/po/meson.build
+++ b/po/meson.build
@@ -1,5 +1,3 @@
-i18n.gettext(meson.project_name(),
-    args: ['--directory='+meson.source_root()],
-    preset: 'glib'
-)
+i18n.gettext(meson.project_name(), preset: 'glib')
+
 subdir('extra')
