--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     
     container:
-      image: elementary/docker:unstable
+      image: elementary/docker:next-unstable
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Install Dependencies
       run: |
         apt update
@@ -33,6 +33,6 @@ jobs:
       image: valalang/lint
       
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Lint
       run: io.elementary.vala-lint -d .
