--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     
     container:
       image: elementary/docker:next-unstable
@@ -19,11 +19,10 @@ jobs:
     - name: Install Dependencies
       run: |
         apt update
-        apt install -y libgranite-dev libgtk-3-dev meson valac
+        apt install -y libgranite-7-dev libgtk-4-dev meson valac
     - name: Build
       run: |
         meson build
-        ninja -C build
         ninja -C build install
 
   lint:
