--- a/meson.build
+++ b/meson.build
@@ -12,11 +12,11 @@ systemd_dep = dependency('systemd')
 glib_dep = dependency('glib-2.0')
 gobject_dep = dependency('gobject-2.0')
 gio_dep = dependency('gio-2.0')
-gtk_dep = dependency('gtk+-3.0')
-gdk_dep = [ dependency('gdk-x11-3.0'), dependency('gdk-wayland-3.0') ]
+granite_dep = dependency('granite-7')
+gtk_dep = dependency('gtk4')
+gtk_x11_dep = dependency('gtk4-x11')
+wayland_dep = dependency('gtk4-wayland')
 x11_dep = dependency('x11')
-granite_dep = dependency('granite')
-handy_dep = dependency('libhandy-1')
 
 add_project_arguments(
     '--vapidir', meson.current_source_dir() / 'vapi',
