--- a/debian/control
+++ b/debian/control
@@ -3,9 +3,8 @@ Section: x11
 Priority: optional
 Maintainer: elementary, Inc. <builds@elementary.io>
 Build-Depends: debhelper (>= 10.5.1),
-               libgranite-dev (>= 6.0.0),
-               libgtk-3-dev,
-               libhandy-1-dev (>= 1.0.0),
+               libgranite-7-dev,
+               libgtk-4-dev,
                meson,
                valac (>= 0.40.0)
 Standards-Version: 4.1.1
