--- a/data/meson.build
+++ b/data/meson.build
@@ -25,8 +25,8 @@ configure_file(
 )
 
 i18n.merge_file(
-    input: 'portals.appdata.xml.in',
-    output: 'io.elementary.portals.appdata.xml',
+    input: 'portals.metainfo.xml.in',
+    output: 'io.elementary.portals.metainfo.xml',
     po_dir: meson.project_source_root() / 'po' / 'extra',
     type: 'xml',
     install: true,
