--- a/data/portals.metainfo.xml.in
+++ b/data/portals.metainfo.xml.in
@@ -1,15 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2021 elementary, Inc. <contact@elementary.io> -->
+<!-- Copyright 2021-2023 elementary, Inc. <contact@elementary.io> -->
 <component>
   <id>io.elementary.portals</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0</project_license>
+  <compulsory_for_desktop>Pantheon</compulsory_for_desktop>
+  <translation type="gettext">xdg-desktop-portal-pantheon</translation>
+
   <name>Portals</name>
   <summary>Access system features in a secure way</summary>
   <description>
     <p>Portals provide APIs to secure apps which enable them to access system features while requiring informed consent.</p>
   </description>
+
+  <url type="homepage">https://elementary.io/</url>
+  <url type="bugtracker">https://github.com/elementary/portals/issues</url>
+  <url type="donation">https://elementary.io/get-involved#funding</url>
+  <url type="help">https://github.com/elementary/portals/discussions/categories/q-a</url>
+  <url type="translate">https://l10n.elementary.io/engage/desktop/</url>
+
+  <developer_name>elementary, Inc.</developer_name>
+  <project_group>elementary</project_group>
+  <update_contact>contact_at_elementary.io</update_contact>
+
   <releases>
+    <release version="7.0.0" data="2023-02-21" urgency="medium">
+      <description>
+        <p>New Features:</p>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+      <issues>
+        <issue url="https://github.com/elementary/portals/issues/52">AppChooser doesn't work with mouse</issue>
+        <issue url="https://github.com/elementary/portals/pull/59">AppChooser: Make primary text translatable<issue>
+    </release>
+
     <release version="1.2.0" data="2022-10-25" urgency="medium">
       <description>
         <p>New Features:</p>
@@ -19,6 +45,7 @@
         </ul>
       </description>
     </release>
+
     <release version="1.1.0" date="2022-01-24" urgency="medium">
       <description>
         <p>New Features:</p>
@@ -33,6 +60,7 @@
         </ul>
       </description>
     </release>
+
     <release version="1.0.1" date="2021-10-28" urgency="medium">
       <description>
         <p>Fixes:</p>
@@ -41,6 +69,7 @@
         </ul>
       </description>
     </release>
+
     <release version="1.0.0" date="2021-10-25" urgency="medium">
       <description>
         <p>First release!</p>
@@ -50,9 +79,4 @@
       </description>
     </release>
   </releases>
-  <compulsory_for_desktop>Pantheon</compulsory_for_desktop>
-   <translation type="gettext">xdg-desktop-portal-pantheon</translation>
-  <developer_name>elementary, Inc.</developer_name>
-  <url type="homepage">https://elementary.io</url>
-  <url type="bugtracker">https://github.com/elementary/portals/issues</url>
 </component>
