--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -2,21 +2,28 @@ name: Merge
 
 on:
   push:
-    branches:
-      - main
+    branches: main
 
 jobs:
-  gettext:
-    name: Gettext
+  build:
     runs-on: ubuntu-22.04
+    container:
+      image: elementary/docker:next-unstable
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
+    - name: Install git
+      run: |
+        apt-get update
+        apt-get install git -y
 
-      - name: Gettext
-        uses: elementary/actions/gettext-template@horus
-        env:
-          GIT_USER_TOKEN: "${{ secrets.GIT_USER_TOKEN }}"
-          GIT_USER_NAME: "elementaryBot"
-          GIT_USER_EMAIL: "builds@elementary.io"
+    - name: Clone repository
+      uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GIT_USER_TOKEN }}
+
+    - name: Update Translation Files
+      uses: elementary/actions/gettext-template@next
+      env:
+        GIT_USER_TOKEN: ${{ secrets.GIT_USER_TOKEN }}
+        GIT_USER_NAME: "elementaryBot"
+        GIT_USER_EMAIL: "builds@elementary.io"
