--- a/data/portals.metainfo.xml.in
+++ b/data/portals.metainfo.xml.in
@@ -33,7 +33,7 @@
       </description>
       <issues>
         <issue url="https://github.com/elementary/portals/issues/52">AppChooser doesn't work with mouse</issue>
-        <issue url="https://github.com/elementary/portals/pull/59">AppChooser: Make primary text translatable<issue>
+        <issue url="https://github.com/elementary/portals/pull/59">AppChooser: Make primary text translatable</issue>
     </release>
 
     <release version="1.2.0" data="2022-10-25" urgency="medium">
