Protoype evolution credentials portal

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,8 @@
 project('xdg-desktop-portal-pantheon', 'c', 'vala', version: '7.0.0', meson_version: '>=0.58')
 
 i18n = import('i18n')
+gnome = import('gnome')
+gnome.post_install(glib_compile_schemas: true)
 
 prefix = get_option('prefix')
 datadir = prefix / get_option('datadir')
