--- a/src/meson.build
+++ b/src/meson.build
@@ -8,6 +8,10 @@ executable(
     'AppChooser/Portal.vala',
     'Background/NotificationRequest.vala',
     'Background/Portal.vala',
+    'ElementaryPortal/ElementaryPortal.vala',
+    'ElementaryPortal/PermissionStore.vala',
+    'ElementaryPortal/Request.vala',
+    'ElementaryPortal/EvolutionCredentials/Portal.vala',
     configure_file(input: 'Config.vala.in', output: '@BASENAME@', configuration: conf_data),
     'ExternalWindow.vala',
     'XdgDesktopPortalPantheon.vala',
