--- a/data/portals.metainfo.xml.in
+++ b/data/portals.metainfo.xml.in
@@ -24,6 +24,15 @@
   <update_contact>contact_at_elementary.io</update_contact>
 
   <releases>
+    <release version="7.1.1" data="2023-08-17" urgency="medium">
+      <description>
+        <p>New Features:</p>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
+
     <release version="7.1.0" data="2023-06-26" urgency="medium">
       <description>
         <p>New Features:</p>
