Add approval flow

--- a/src/meson.build
+++ b/src/meson.build
@@ -8,8 +8,9 @@ executable(
     'AppChooser/Portal.vala',
     'Background/NotificationRequest.vala',
     'Background/Portal.vala',
-    'Screenshot/Dialog.vala',
+    'Screenshot/ApprovalDialog.vala',
     'Screenshot/Portal.vala',
+    'Screenshot/SetupDialog.vala',
     configure_file(input: 'Config.vala.in', output: '@BASENAME@', configuration: conf_data),
     'ExternalWindow.vala',
     'XdgDesktopPortalPantheon.vala',
