--- a/src/meson.build
+++ b/src/meson.build
@@ -8,6 +8,9 @@ executable(
     'AppChooser/Portal.vala',
     'Background/NotificationRequest.vala',
     'Background/Portal.vala',
+    'ScreenCast/MonitorTracker/Interface.vala',
+    'ScreenCast/MonitorTracker/Monitor.vala',
+    'ScreenCast/MonitorTracker/MonitorTracker.vala',
     'ScreenCast/Portal.vala',
     'ScreenCast/Session.vala',
     'Wallpaper/Portal.vala',
