--- a/src/meson.build
+++ b/src/meson.build
@@ -11,7 +11,9 @@ executable(
     'ScreenCast/MonitorTracker/Interface.vala',
     'ScreenCast/MonitorTracker/Monitor.vala',
     'ScreenCast/MonitorTracker/MonitorTracker.vala',
+    'ScreenCast/Dialog.vala',
     'ScreenCast/Portal.vala',
+    'ScreenCast/SelectionRow.vala',
     'ScreenCast/Session.vala',
     'Wallpaper/Portal.vala',
     configure_file(input: 'Config.vala.in', output: '@BASENAME@', configuration: conf_data),
