Implement screen cast portal (#102)

--- a/src/meson.build
+++ b/src/meson.build
@@ -8,10 +8,18 @@ executable(
     'AppChooser/Portal.vala',
     'Background/NotificationRequest.vala',
     'Background/Portal.vala',
+    'ScreenCast/MonitorTracker/Interface.vala',
+    'ScreenCast/MonitorTracker/Monitor.vala',
+    'ScreenCast/MonitorTracker/MonitorTracker.vala',
+    'ScreenCast/Dialog.vala',
+    'ScreenCast/Portal.vala',
+    'ScreenCast/SelectionRow.vala',
+    'ScreenCast/Session.vala',
     'Screenshot/Portal.vala',
     'Screenshot/SetupDialog.vala',
     'Wallpaper/Portal.vala',
     configure_file(input: 'Config.vala.in', output: '@BASENAME@', configuration: conf_data),
+    'DesktopIntegration.vala',
     'ExternalWindow.vala',
     'XdgDesktopPortalPantheon.vala',
     icon_res,
