--- a/data/portals.metainfo.xml.in
+++ b/data/portals.metainfo.xml.in
@@ -26,6 +26,18 @@
   <update_contact>contact_at_elementary.io</update_contact>
 
   <releases>
+    <release version="8.0.0" data="2024-07-03" urgency="medium">
+      <description>
+        <p>New Features:</p>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+      <issues>
+        <issue url="https://github.com/elementary/portals/issues/74">Screencast Portal</issue>
+      </issues>
+    </release>
+
     <release version="7.1.1" data="2023-08-18" urgency="medium">
       <description>
         <p>New Features:</p>
