--- a/data/portals.metainfo.xml.in
+++ b/data/portals.metainfo.xml.in
@@ -84,30 +84,8 @@
       </description>
     </release>
 
-    <release version="1.1.0" date="2022-01-24" urgency="medium">
-      <description>
-        <p>New Features:</p>
-        <ul>
-          <li>Add a destructive action option for access portals</li>
-        </ul>
-        <p>Fixes:</p>
-        <ul>
-          <li>Fix a crash when opening apps in the AppChooser portal</li>
-          <li>Fix window focus and position for Access portals with no parent window</li>
-          <li>Set AppChooser portal as a modal dialog for proper animations</li>
-        </ul>
-      </description>
-    </release>
-
-    <release version="1.0.1" date="2021-10-28" urgency="medium">
-      <description>
-        <p>Fixes:</p>
-        <ul>
-          <li>Prevent delay after logging in</li>
-        </ul>
-      </description>
-    </release>
-
+    <release version="1.1.0" date="2022-01-24" urgency="medium" />
+    <release version="1.0.1" date="2021-10-28" urgency="medium" />
     <release version="1.0.0" date="2021-10-25" urgency="medium" />
   </releases>
 </component>
