--- a/data/portals.metainfo.xml.in
+++ b/data/portals.metainfo.xml.in
@@ -26,6 +26,18 @@
   <update_contact>contact_at_elementary.io</update_contact>
 
   <releases>
+    <release version="8.0.0" data="2024-08-15" urgency="medium">
+      <description>
+        <p>New Features:</p>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+      <issues>
+        <issue url="https://github.com/elementary/portals/issues/115">Center and Keep on Top display settings dialog</issue>
+      </issues>
+    </release>
+
     <release version="7.2.0" data="2024-07-24" urgency="medium">
       <description>
         <p>New Features:</p>
