--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: elementary, Inc. <builds@elementary.io>
 Build-Depends: debhelper (>= 10.5.1),
                libgranite-7-dev,
                libgtk-4-dev,
+               libpantheon-wayland-1-dev,
                meson,
                valac (>= 0.40.0)
 Standards-Version: 4.1.1
