--- a/src/meson.build
+++ b/src/meson.build
@@ -8,8 +8,10 @@ executable(
     'AppChooser/Portal.vala',
     'Background/NotificationRequest.vala',
     'Background/Portal.vala',
+    'Notification/ActionGroup.vala',
+    'Notification/DBus.vala',
+    'Notification/Notification.vala',
     'Notification/Portal.vala',
-    'Notification/PortalNotification.vala',
     'Notification/Widget.vala',
     'Notification/Window.vala',
     'ScreenCast/MonitorTracker/Interface.vala',
