--- a/src/meson.build
+++ b/src/meson.build
@@ -9,11 +9,12 @@ executable(
     'Background/NotificationRequest.vala',
     'Background/Portal.vala',
     'Notification/ActionGroup.vala',
+    'Notification/BubbleManager.vala',
     'Notification/DBus.vala',
     'Notification/Notification.vala',
     'Notification/Portal.vala',
-    'Notification/Widget.vala',
-    'Notification/Window.vala',
+    'Notification/Widgets/Bubble.vala',
+    'Notification/Widgets/Widget.vala',
     'ScreenCast/MonitorTracker/Interface.vala',
     'ScreenCast/MonitorTracker/Monitor.vala',
     'ScreenCast/MonitorTracker/MonitorTracker.vala',
