--- a/src/meson.build
+++ b/src/meson.build
@@ -17,6 +17,7 @@ executable(
     'ScreenCast/Session.vala',
     'Screenshot/Portal.vala',
     'Screenshot/SetupDialog.vala',
+    'Screenshot/Utils.vala',
     'Wallpaper/Portal.vala',
     configure_file(input: 'Config.vala.in', output: '@BASENAME@', configuration: conf_data),
     'DesktopIntegration.vala',
