--- a/data/portals.metainfo.xml.in
+++ b/data/portals.metainfo.xml.in
@@ -26,6 +26,18 @@
   <update_contact>contact_at_elementary.io</update_contact>
 
   <releases>
+    <release version="8.0.2" data="2025-06-09" urgency="medium">
+      <description>
+        <p>New Features:</p>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+      <issues>
+        <issue url="https://github.com/elementary/portals/issues/135">Screenshots over the Portal have no window shadows</issue>
+      </issues>
+    </release>
+
     <release version="8.0.1" data="2025-05-01" urgency="medium">
       <description>
         <p>New Features:</p>
