Remember screenshot type

--- a/meson.build
+++ b/meson.build
@@ -48,3 +48,7 @@ conf_data.set_quoted('VERSION', meson.project_version())
 subdir('data')
 subdir('po')
 subdir('src')
+
+gnome.post_install (
+    glib_compile_schemas: true
+)
