--- a/data/meson.build
+++ b/data/meson.build
@@ -37,3 +37,9 @@ icon_res = gnome.compile_resources(
     'screenshot-icon-resources',
     'gresource.xml'
 )
+
+install_data(
+    'gschema.xml',
+    install_dir: get_option('datadir') / 'glib-2.0' / 'schemas',
+    rename: meson.project_name() + '.gschema.xml'
+)
