--- a/data/portals.metainfo.xml.in
+++ b/data/portals.metainfo.xml.in
@@ -26,6 +26,18 @@
   <update_contact>contact_at_elementary.io</update_contact>
 
   <releases>
+    <release version="8.1.0" data="2025-12-12" urgency="medium">
+      <description>
+        <p>New Features:</p>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+      <issues>
+        <issue url="https://github.com/elementary/portals/issues/158">Remember Screenshot Type Choice</issue>
+      </issues>
+    </release>
+
     <release version="8.0.4" data="2025-06-22" urgency="medium">
       <description>
         <p>Fixes a regression in 8.0.3 that happens with unreleased version of Granite</p>
